--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@auth0/auth0-spa-js": "^1.6.4",
     "@types/react-helmet": "^6.0.0",
     "babel-plugin-styled-components": "^1.10.7",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.20.22",
     "gatsby-image": "^2.3.2",
     "gatsby-plugin-manifest": "^2.3.3",
