--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "@blueprintjs/core": "^3.31.0",
     "@types/react-helmet": "^6.0.0",
     "babel-plugin-styled-components": "^1.11.1",
-    "gatsby": "^2.24.47",
+    "bl": "^4.0.3",
+    "gatsby": "^2.24.60",
+    "clipboard-copy": "^3.1.0",
     "gatsby-image": "^2.3.2",
     "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-offline": "^3.1.2",
