Corpora should listen on more ports.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
       - AWS_SECRET_ACCESS_KEY=dev_secret_access_key
       - BOTO_ENDPOINT_URL=http://localstack:4566
       - DEPLOYMENT_STAGE=dev
+    command: ["python3", "run_local_server.py", "--host", "0.0.0.0"]
     volumes:
       - ./backend/chalice/api_server/app.py:/chalice/app.py
       - ./backend/chalice/api_server/run_local_server.py:/chalice/run_local_server.py
