--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -25,5 +25,7 @@ RUN mv .chalice/config.json.dev .chalice/config.json
 RUN mkdir -p chalicelib config vendor
 ADD corpora chalicelib/corpora
 ADD config/corpora-api.yml chalicelib/config/corpora-api.yml
+# Make python3 the default 'python' executable.
+RUN update-alternatives --install /usr/bin/python python /usr/bin/python3.8 1
 
 CMD ["python3", "run_local_server.py"]
