--- a/oauth/docker-compose.yml
+++ b/oauth/docker-compose.yml
@@ -14,52 +14,9 @@
               "ShowKeySet": true
             }
           }
-        API_SCOPES_INLINE: |
-          [
-            {
-              "Name": "some-app-scope-1"
-            },
-            {
-              "Name": "some-app-scope-2"
-            }
-          ]
-        API_RESOURCES_INLINE: |
-          [
-            {
-              "Name": "some-app",
-              "Scopes": ["some-app-scope-1", "some-app-scope-2"]
-            }
-          ]
-        USERS_CONFIGURATION_INLINE: |
-          [
-            {
-              "SubjectId":"1",
-              "Username":"User1",
-              "Password":"pwd",
-              "Claims": [
-                {
-                  "Type": "name",
-                  "Value": "Sam Tailor"
-                },
-                {
-                  "Type": "email",
-                  "Value": "sam.tailor@gmail.com"
-                },
-                {
-                  "Type": "some-api-resource-claim",
-                  "Value": "Sam's Api Resource Custom Claim"
-                },
-                {
-                  "Type": "some-api-scope-claim",
-                  "Value": "Sam's Api Scope Custom Claim"
-                },
-                {
-                  "Type": "some-identity-resource-claim",
-                  "Value": "Sam's Identity Resource Custom Claim"
-                }
-              ]
-            }
-          ]
+        API_SCOPES_PATH: /tmp/config/api_scopes.json
+        API_RESOURCES_PATH: /tmp/config/api_resources.json
+        USERS_CONFIGURATION_PATH: /tmp/config/users.json
         CLIENTS_CONFIGURATION_PATH: /tmp/config/clients-config.json
       volumes:
         - .:/tmp/config:ro
