--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,3 +59,23 @@ services:
       - ./backend/config:/chalice/chalicelib/config
       # TODO - avoid file mounts where possible!
       - ./backend/chalice/api_server/.chalice/config.json.dev:/chalice/.chalice/config.json
+  oidc-server-mock:
+    container_name: oidc-server-mock
+    image: soluto/oidc-server-mock
+    ports:
+      - "4011:80"
+    environment:
+      ASPNETCORE_ENVIRONMENT: Development
+      SERVER_OPTIONS_INLINE: |
+        {
+          "AccessTokenJwtType": "JWT",
+          "Discovery": {
+            "ShowKeySet": true
+          }
+        }
+      API_SCOPES_PATH: /tmp/config/api_scopes.json
+      API_RESOURCES_PATH: /tmp/config/api_resources.json
+      USERS_CONFIGURATION_PATH: /tmp/config/users.json
+      CLIENTS_CONFIGURATION_PATH: /tmp/config/clients-config.json
+    volumes:
+      - ./oauth:/tmp/config:ro
