--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
       - CORPORA_LOCAL_DEV=true
+      - AWS_REGION=us-west-2
       - AWS_ACCESS_KEY_ID=dev_access_key_id
       - AWS_SECRET_ACCESS_KEY=dev_secret_access_key
       - BOTO_ENDPOINT_URL=http://localstack:4566
