--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2.1'
+version: '3.8'
 
 services:
   database:
@@ -10,7 +10,7 @@ services:
       - POSTGRES_PASSWORD=test_pw
       - DATA_DIR=/tmp/localstack/data
     volumes:
-      - ./.devenv/postgres:/var/lib/postgresql/data
+      - database:/var/lib/postgresql/data
   localstack:
     image: localstack/localstack
     ports:
@@ -22,7 +22,7 @@ services:
       - PORT_WEB_UI=${PORT_WEB_UI- }
       - HOST_TMP_FOLDER=${TMPDIR}
     volumes:
-      - ./.devenv/localstack:/tmp/localstack
+      - localstack:/tmp/localstack
   frontend:
     image: corpora-frontend
     build: frontend
@@ -84,3 +84,6 @@ services:
     volumes:
       - ./oauth/pkcs12:/tmp/pkcs12:ro
       - ./oauth:/tmp/config:ro
+volumes:
+  database:
+  localstack:
