--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,7 @@ services:
       - AWS_SECRET_ACCESS_KEY=dev_secret_access_key
       - BOTO_ENDPOINT_URL=http://localstack:4566
       - DEPLOYMENT_STAGE=dev
+      - RESTART_ON_FAILURE=yes
     #command: ["python3", "run_local_server.py", "--host", "0.0.0.0"]
     command: ["python3", "/chalice/run_dev_server.py", "--host", "0.0.0.0"]
     volumes:
