--- a/oauth/clients-config.json
+++ b/oauth/clients-config.json
@@ -15,6 +15,7 @@
            "openid", "profile", "email", "offline_access"
         ],
 	"AllowAccessTokensViaBrowser": true,
+	"AllowOfflineAccess": true,
 	"IdentityTokenLifetime": 3600,
         "AccessTokenLifetime": 3600,
         "ClientClaimsPrefix": "",
