--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - DATA_DIR=/tmp/localstack/data
       - PORT_WEB_UI=${PORT_WEB_UI- }
       - HOST_TMP_FOLDER=${TMPDIR}
+      - DEFAULT_REGION=us-west-2
     volumes:
       - localstack:/tmp/localstack
   frontend:
