fix more unittests

--- a/backend/chalice/api_server/Makefile
+++ b/backend/chalice/api_server/Makefile
@@ -34,7 +34,7 @@ ci-deploy: retrieve-deployed
 	make deploy
 
 .PHONY: package
-package: build-chalice-config
+package:
 	mkdir -p chalicelib/corpora
 	cp -R ../../corpora/common chalicelib/corpora
 	cp -R ../../corpora/lambdas chalicelib/corpora
