--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,16 +8,16 @@ services:
     environment:
       - POSTGRES_USER=corpora
       - POSTGRES_PASSWORD=test_pw
-      - DATA_DIR=/tmp/localstack/data
     volumes:
       - database:/var/lib/postgresql/data
   localstack:
-    image: localstack/localstack
+    image: localstack/localstack@sha256:7c6635493185d25165979995fb073fd789c72b6d8b17ef3a70b798d55576732f
     ports:
       - "4566:4566"
     environment:
+      - HOSTNAME_EXTERNAL=localstack
       - SERVICES=s3,secretsmanager
-      - DEBUG=${DEBUG- }
+      - DEBUG=1
       - DATA_DIR=/tmp/localstack/data
       - PORT_WEB_UI=${PORT_WEB_UI- }
       - HOST_TMP_FOLDER=${TMPDIR}
