--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -43,4 +43,8 @@ smoke-test-with-local-backend-ci:
 
 .PHONY: smoke-test-with-local-dev
 smoke-test-with-local-dev:
+	# HACK/TODO - Temporarily reroute backend requests to docker-compose backend DNS name.
+	cp src/configs/local-docker.js src/configs/configs.js
 	npm run e2e-dev
+	cp src/configs/local.js src/configs/configs.js
+	
