--- a/frontend/package.json
+++ b/frontend/package.json
@@ -89,7 +89,7 @@
     "e2e": "TEST_ENV=local jest --config jest/e2e.config.js",
     "e2e-localProd": "TEST_ENV=localProd jest --config jest/e2e.config.js",
     "e2e-localProd-ci": "DEBUG=pw:api TEST_ENV=localProd jest --config jest/e2e.config.js",
-    "e2e-dev": "TEST_ENV=dev jest --config jest/e2e.config.js",
+    "e2e-dev": "TEST_ENV=local jest --config jest/e2e.config.js",
     "e2e-staging": "TEST_ENV=staging jest --config jest/e2e.config.js",
     "e2e-prod": "TEST_ENV=prod jest --config jest/e2e.config.js",
     "type-check": "tsc --noEmit",
