--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,8 +38,9 @@ services:
       - /corpora-frontend/node_modules/
   processing:
     image: corpora-processing
-    build: backend/processing_image
-    dockerfile: Dockerfile.processing_image
+    build:
+      context: .
+      dockerfile: Dockerfile.processing_image
     restart: never
   backend:
     image: corpora-backend
