--- a/scripts/remotedev.yml
+++ b/scripts/remotedev.yml
@@ -7,6 +7,9 @@ Parameters:
   Priority:
     Description: Listener rule priority number within the given listener
     Type: Number
+  StateMachineDefinition:
+    Description: State Machine Definition.
+    Type: String
 
 Resources:
   DevEnv:
@@ -17,6 +20,7 @@ Resources:
         CustomStackName: !Ref AWS::StackName
         ImageTag: !Ref ImageTag
         Priority: !Ref Priority
+        StateMachineDefinition: !Ref StateMachineDefinition
 
 Outputs:
   FrontendUrl:
